[package]
name = "kingschip"
version = "0.0.3"
edition = "2021"

[dependencies]
clap = { version= "4.5.7", features=["derive"] }
tokio = { version = "1.38.0", default-features = false, features = ["rt-multi-thread", "fs"] }
fantoccini = { version = "0.19.3", default-features = false, features = ["rustls-tls"] }
serde_json = { version = "1.0.117", default-features = false, features = ["alloc"] }
ring = "0.17.8"

[[bin]]
name = "ksc"
path = "src/cli.rs"

[profile.release]
lto = false
strip = true
panic = 'abort'
opt-level = 3
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1